# SumiClock

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  KIRO_USAGE.md  LICENSE  Makefile  README.md  SUBMISSION.md  compose.yaml  config.example.yaml  config.yaml  docker-compose.test.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.kiro/hooks/: README.md  docker-health-check.json  format-on-save.json  lint-on-commit.json  test-on-save.json  type-check-on-save.json  update-requirements.json  validate-image-generation.json
.kiro/specs/template-system/: design.md  requirements.md
.kiro/steering/: api-development.md  configuration-management.md  docker-deployment.md  image-generation.md  kiroween-hackathon.md  project-context.md  python-standards.md  testing-strategy.md
layouts/: clock-minimal.yml  clock-with-weather.yml
src/: __init__.py  api.py  clock_generator.py  config.py  logging_config.py  main.py  template_renderer.py  weather_icon_generator.py  weather_icons.py
tests/: test_api.py  test_clock_generator.py
